Rewrite .Rmd markdown file as vignette
This involves adding @export to .R files that are called directly in
the vignette (optLBSPRDome, simLBSPRDome) and calling
library(LBSPRDome) in the vignette. We also use withr to set a random
seed within the vignette without affecting the global environment.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Description: Allows LB-SPR estimation with selectivity-at-length
   parameters fixed during optimisation and supports dome-shaped 
   selectivity specifications.
 Imports: stats
-Suggests: knitr
+Suggests: rmarkdown, knitr, dplyr, ggplot2, withr
 VignetteBuilder: knitr
 License: GPL-2
 Encoding: UTF-8
